<resources>
    <string name="app_name">TwitterDemo</string>
    <string name="login_button">Log In</string>
    <string name="enter_email"> Enter your email address</string>
    <string name="enter_password">Enter your password</string>
    <string name="select_photo">Select your profile photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter your name</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="ticket_hint">What do you think?</string>
    <string name="tweet_default_text">Something will come here, but you decide what</string>
    <string name="default_date">21.03.2018</string>
    <string name="username">Username</string>
</resources>
