<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundTweets"
   >


    <ImageView
        android:id="@+id/imgTweetProfilePhoto"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:contentDescription="profile"
        android:src="@drawable/ic_user_profile"
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/txtUsername"
        />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/imgTweetProfilePhoto"
        />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/default_date"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/txtPost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tweet_default_text"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/imgTweetProfilePhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       />

    <ImageView
        android:id="@+id/imgTweetImage"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:src="@drawable/ic_default_user_image"
        app:layout_constraintTop_toBottomOf="@id/txtPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />


    <ImageButton
        android:id="@+id/imgFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_favorite"
        app:layout_constraintTop_toBottomOf="@id/imgTweetImage"
        app:layout_constraintStart_toStartOf="parent"
        />


</android.support.constraint.ConstraintLayout>